--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,16 +81,10 @@ exclude = '''
 [tool.ruff]
 line-length = 100
 target-version = "py310"
-select = [
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # Pyflakes
-    "I",   # isort
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-]
-ignore = ["E501"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "B", "C4", "UP"]
+ignore = ["E501", "B905"]
 
 [tool.mypy]
 python_version = "3.10"
